added animation + style updates

--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">    
 </head>
 <body>
-
-    <div id="container">
-        <h2>Ask Tarot cards about your question:</h2>
-        <textarea id="question" rows="4" cols="50" placeholder="Type your question here..."></textarea>
-        <button id="btn">GET ANSWER!</button>
+    <div class="all">
+        <h2>Tarot speaks</h2>
+        <div id="container">
+            
+            <textarea id="question" rows="4" cols="50" placeholder="Type your question here..."></textarea>
+            <button id="btn">GET ANSWER!</button>
+        </div>
     </div>
+   
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>    
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
