animation+video+audio

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <button id="btn">GET ANSWER!</button>
         </div>
     </div>
+
+    <audio id="player" autoplay loop>
+        <source src="https://cdn.glitch.global/b4f1ff9f-3b15-4ece-baf5-368642747199/tunnels-soundroll-main-version-30015-01-58.mp3?v=1706242806968" type="audio/mp3">
+    </audio>
+
+    <video autoplay="autoplay" loop="loop" muted defaultMuted playsinline id="myVideo">
+        <source src="https://v4.cdnpk.net/videvo_files/video/free/video0485/large_preview/_import_61a736c1f00382.08418568.mp4" type="video/mp4">
+    </video>
    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
